--- a/.config/hypr/config/Keybindings.conf
+++ b/.config/hypr/config/Keybindings.conf
@@ -86,3 +86,10 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+
+# Spotify controlls
+bind = CTRL SHIFT, W, exec, playerctl play-pause --player spotify
+bind = CTRL ALT, D, exec, playerctl next --player spotify
+bind = CTRL ALT, A, exec, playerctl previous --player spotify
+bind = CTRL ALT, R, exec, playerctl loop Track --player spotify
+bind = CTRL SHIFT, R, exec, playerctl loop Playlist --player spotify
