--- a/.config/hypr/config/Keybindings.conf
+++ b/.config/hypr/config/Keybindings.conf
@@ -18,6 +18,7 @@ bind = $mainMod, D, exec, ~/.config/hypr/scripts/show-desktop.sh
 
 # Open Websites
 bind = $mainMod, G, exec, firefox https://github.com/ 
+bind = $mainMod, Y, exec, firefox https://youtube.com/
 
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
