updated waybar and added fastfetch

--- a/hypr/.config/hypr/config/Autostart.conf
+++ b/hypr/.config/hypr/config/Autostart.conf
@@ -5,6 +5,7 @@ exec-once = uwsm app -- swaync
 exec-once = uwsm app -- $terminal
 exec-once = uwsm app -- $browser
 exec-once = uwsm app -- waybar
-exec-once = hyprctl dispatch workspace 1
 exec-once = uwsm app -- spotify
 exec-once = hyprctl dispatch workspace 1
+exec-once = hyprctl dispatch workspace 1
+exec-once = playerctld
