--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,26 +1,29 @@
 # Decoration config
-source = ~/.config/hypr/themes/Arcane/Decoration.conf
+source = ~/.config/hypr/themes/Spider-verse/Decoration.conf
 
 # Animations config
-source = ~/.config/hypr/themes/Arcane/Animations.conf
+source = ~/.config/hypr/themes/Spider-verse/Animations.conf
 
 # Main monitors config
 source = ~/.config/hypr/config/Monitors.conf
 
+# Autostart apps
+source = ~/.config/hypr/config/Autostart.conf
+
 # Programs config
 source = ~/.config/hypr/config/Programs.conf
-
-# Input devices
-source = ~/.config/hypr/config/Input.conf
 
 # Misc configs
 source = ~/.config/hypr/config/misc.conf
 
+# Input devices
+source = ~/.config/hypr/config/Input.conf
+
 # Keybindings
 source = ~/.config/hypr/config/Keybindings.conf
 
-# Window Rules
+# Window rules
 source = ~/.config/hypr/config/Window-Rules.conf
 
-# Autostart apps
-source = ~/.config/hypr/config/Autostart.conf
+# Window Rules
+source = ~/.config/hypr/config/Window-Rules.conf
