--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -8,10 +8,9 @@
 
 # The basic colors
 foreground              #CDD6F4
-background              #06174D
+background              #49132B
 selection_foreground    #1E1E2E
 selection_background    #F5E0DC
-background_opacity        0.8
 
 # Cursor colors
 cursor                  #F5E0DC
